--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -29,7 +29,7 @@
   <br>
   <h3>To do:</h3>
   <ol class="todo">
-    <li>PlaceholderForTasks</li>
+    <li>Back into OO. And prototypal inheritance.</li>
     <li></li>
     <li><span class="ltred">Potential Blocks:</span>"subtractive or additive CSS?" --whether to go with mobile-first design or do more complex layout and then undo those rules as page gets smaller: decisions...decisions...</li>
   </ol><br>
