--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,6 +20,23 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Friday July 21st, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Real life: work, etc, imposed on coding time. But I'm back into it. Deliberate practice on review of reference types vs primitives --The stack vs the heap. <a href="https://stackoverflow.com/questions/13266616/primitive-value-vs-reference-value" target="_blank">Interesting & clear Stack Overflow Discussion</a></h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>lesson in reference types vs value.  copying pointers to place in memory vs copying value</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span> none</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+
   <h2 class="date">Thursday July 20th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Took a day away from coding. I ran. Hard, meaningful labor. Watched a terrible film abt Tech Industry: "The Circle"...Then reconnected with <a href="https://frontendmasters.com/" target="_blank">FrontEndMasters</a> Okay. Enough reflection. Let's begin.<br />
@@ -35,7 +52,8 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Reviewed & implemented two menus in flexbox. --One a bit more complex using aria</li>
+    <li>added Objects discussion in ecma view: a simple lesson & quiz on prototypal inheritance</li>
   </ol>
   <hr />
 
