--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -669,56 +669,111 @@ ohFunkThis(function() {console.log("I'm a parameter!")});
 // I'm a parameter!
 </pre>
 </div>
-    <h4 class="chtitle ltred">This is the essence of "Functional Programming"!</h4></div>
-  <div class="framed6">
-    <h2 class="chtitle wh">Objects</h2>
-    <h3>Dead-simple Constructor Fn</h3>
-    <pre class="prettyprint w60">function Person(name) {
-  this.name = name;
-}
-var cara = new Person("Cara");
-console.log(cara.name); // "Cara"
-
-// "new" operator redefines context of 'this'--it is not window.
-</pre>
-    <h3>Prototypal Inheritance</h3>
-    <pre class="prettyprint linenums">
-var personConstruction = {
-  name: "Default Anon",
-  greet: function(name, mood) {
-    name = name || "you";
-    mood = mood || "great";
-    let str = `Hello, ${name}. I'm ${this.name} & I feel ${mood} because I'm a ${this.species}`
-    console.log(str);
-  },
-  species: "human"
-};
-
-function Person(name, species) {
-  this.name = name;
-  this.species = species;
-}
-
-Person.prototype = personConstruction;
-
-cara = new Person("Cara", "dog");
-cara.greet(); // Hello, you. I'm Cara & I feel great because I'm a dog
-</pre>
-    <h4 class="chtitle dkblue">Line 19 nicely allows for overriding of the prototype by feeding in args to the <code class="dkred underline"><i class="y">new</i> <span class="ltgreen">Person</span> cara</code></h4>
-    <div class="simple-frame">
-      <h4 class="dkmango">This will blow your mind</h4> the methods 'placed on', or 'fed to' the <i class="ltgreen">new</i> Person are placed ON TOP OF the prototype. They STILL exist on the prototoype!
-      <div class="slate-skyblue-fr w60"> Within the "var personConstruction" object... exist the defaults. These defaults ARE STILL ACCESSIBLE via the "__proto__" property!
-      </div>
-      <pre class="prettyprint w40">
-cara.__proto__.name;
-// "Default Anon"
-cara.__proto__.species;
-// "human"
-...etc.
-<img  class="w20" src="./img/proto1.png" alt=""></pre>
-
-    </div>
+    <h4 class="chtitle ltred">This is the essence of "Functional Programming"!</h4>
   </div>
+  <hr>
+
+<div class="framed6">
+    <h2 class="chtitle wh">Objects (& operators/methods commonly used with them)</h2>
+
+    <h3>4 ways to create an object</h3>
+
+<h2 class="wh">I.</h2>
+
+<pre class="prettyprint w60 ctr">
+<div class="fRight dkbg forest-red-fr sm">/*
+rarely used (verbose) default constructor Fn for objects.
+This verbose strategy for creating objects is verifiable with<code>instanceof</code>
+*/</div>
+
+  var tunaMelt = new Object();
+  tunaMelt.kind = "tunamelt"
+  tunaMelt.meat = "tuna";
+  tunaMelt.veg = "tomato";
+  tunaMelt.bread = "toast";
+  tunaMelt.summary = function () {
+      console.log(`A ${this.kind} has ${this.meat}, ${this.veg} & ${this.bread}`);
+  }
+  tunaMelt.summary();
+
+  console.log(tunaMelt instanceof Object); // true
+  </pre>
+<h2 class="wh">II.</h2>
+The simpler basic way to create objects is implicitly an instance of Object.
+<pre class="prettyprint linenums">
+var pbj = {
+  kind: "pbj",
+  meat: "peanut",
+  veg: "grape",
+  bread: "whole wheat",
+  summary: function () {
+    console.log(`A ${this.kind} has ${this.meat}, ${this.veg} & ${this.bread}`);
+  }
+}
+
+// console.log(pbj instanceof Object); // true
+pbj.summary();
+</pre>
+<h3><span class="wh lg">I</span> & <span class="wh lg">II</span> are both instances of the root Object.</h3>
+
+<h2 class="wh">III.</h2>
+<pre class="prettyprint">
+<pre class="fRight dkbg forest-red-fr sm">/*
+  //.create(), as mentioned, needs a param
+  // NB: This way to create an object is stand-alone.
+  // There's no Obj.prototype to fallback on. --No properties to inherit. //error
+  // Therefore...
+  // console.log(ruben.toString()); // returns  error
+  // console.log(ruben instanceof Object); // returns  false
+*/</pre>
+var ruben = Object.create(null);
+ruben.kind = "ruben"
+ruben.meat = "corned beef"
+ruben.veg = "sauerkraut"
+ruben.bread = "rye"
+ruben.summary = function () {
+  console.log(`A ${this.kind} has ${this.meat}, ${this.veg} & ${this.bread}`);
+}
+
+ruben.summary();
+
+console.log(ruben.toString()); // error
+console.log(ruben instanceof Object); // false
+
+</pre>
+
+<h2 class="wh">IV.</h2>
+<h4 class="dkmango">Finally, the constructor Function</h4>
+<pre class="prettyprint">
+  <pre class="fRight dkbg forest-red-fr w40 sm">
+/*
+// This has numerous advantages:
+// 1) It can be used to create multiple objects exploiting the "blueprint" defined inside the Fn.
+
+// 2) This also has both Object.prototype AND Sandwich.prototype that you can modify as a fallback for default properties.
+*/
+</pre>
+  function Sandwich(kind, meat, veg, bread) {
+    this.kind = kind;
+    this.meat = meat;
+    this.veg = veg;
+    this.bread = bread;
+    console.log(`${this.kind}: ${meat}, ${veg} & ${bread}`);
+  }
+
+
+
+  var turkeyClub = new Sandwich("turkeyClub", "turkey", "romaine", "roll");
+  // turkeyClub: turkey, romaine & roll
+
+  var blt = new Sandwich("blt", "bacon", "lettuce", "white")
+  // blt: bacon, lettuce & white
+
+</pre>
+
+</div>
+<hr>
+
   <div class="framed5">
     <h3 class="pastred">call(); Apply();</h3>
     <pre class="prettyprint linenums w60">
