--- a/states/home/home.html
+++ b/states/home/home.html
@@ -4,20 +4,20 @@
 <pre>
 <!-- pre for all -->
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">.this()</h1>
-<h2>practical notes, code and advice</h2>
-<p>These pages are full of lessons with purpose. Code, advice & wisdom that I've collected over the past year distilled from myriad sources in web development.</p>
+<h2>practical notes, example code, advice and experimentation.</h2>
+<p>These pages are a collection of code & advice that I've collected over the past year distilled from myriad sources in web development.</p>
 </div>
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">.attr()</h1>
 <h2>This is a "living-document"</h2>
-<p>These are not comprehensive walkthroughs. CodeJournal is a collection of lessons that are being edited and improved upon.
-<br />These pages are a reference, a motivator and a small contribution to the community that
-that has been such a help to me in the past years.<br>
-<em class="bold">CodeJournal</em> was created in order to reduce some of the pain points<br /> of learning and mastering difficult tech in web development.</p>
+<p>These are not comprehensive walkthroughs. CodeJournal is a collection of mini-lessons that are being edited regularly
+<br />These lessons exist as a record of my own progress & are, as of yet, unsorted and quite random. They are, currently, a list of personal notes to be made available as a searchable reference in the near future.
+<br>
+<em class="bold">CodeJournal</em>'s larger goal is to reduce some of the pain points<br /> of learning and mastering difficult tech in web development.</p>
 <span class="sm chtitle dkgrey2">attribution of code and recommendations to useful articles, presentations, lectures, books, etc. will continue to be made as I iterate over these pages regularly.</span>
 </div>
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">TL;DR</h1>
 <h2>This is a fan-site <em>of</em> developer-students <em>for</em> developer-students.</h2>
-<span class="sm softsand">If I am--at all--lucky enough to have helped just one person, then the months putting these lessons together will not have been misspent.</span>
+<span class="sm softsand">If they wind up being a help to you, then the months putting these lessons together will not have been misspent.</span>
 </div>
 </pre>
 <br><br>
