--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,6 +20,38 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Sunday July 23rd, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">More on objects and back into SQL</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>PlaceholderForTasks</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+  <h2 class="date">Saturday July 22nd, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Incrementalism. <a href="http://freakonomics.com/podcast/become-great-just-anything/" target="_blank">Interesting debate</a> on deliberate practice Malcom Gladwell (of 10,000 hours "Outliers" fame) vs Anders Ericsson on the fallacy of 10,000 making a qualitative rather than quantitative point about <em>How</em> those 10,000 hours are spent.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Further investigation into <em>(and employment of)</em> bind(); to produce some illustrative examples to controlling what 'this' references in js.</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span> acquiring a grasp of helper methods such as <code>.getPrototypeOf()</code> & <code>X instanceof Y</code></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Friday July 21st, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Real life: work, etc, imposed on coding time. But I'm back into it. Deliberate practice on review of reference types vs primitives --The stack vs the heap. <a href="https://stackoverflow.com/questions/13266616/primitive-value-vs-reference-value" target="_blank">Interesting & clear Stack Overflow Discussion</a></h3>
@@ -33,7 +65,8 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Improvements in OO and re-acquaintance with obj.prototype and how it's used. Entry in app completed.</li>
+    <li>Decided upon UX of home view edit & logo animation. Will get to work on that tomorrow</li>
   </ol>
   <hr />
 
