--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -23,23 +23,25 @@
   <h2 class="date">Sunday July 23rd, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">More on objects and back into SQL</h3>
-
+  <blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">Masking images in <a href="https://twitter.com/hashtag/CSS?src=hash">#CSS</a> using mask-image: <a href="https://t.co/o95uS7xD3d">https://t.co/o95uS7xD3d</a></p>&mdash; Alligator.io (@alligatorio) <a href="https://twitter.com/alligatorio/status/885167575851782144">July 12, 2017</a></blockquote>
+  <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   <br>
   <h3>To do:</h3>
   <ol class="todo">
-    <li>PlaceholderForTasks</li>
+    <li>.call .apply .bind entry in ecma view</li>
     <li></li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li><span class="ltred">Potential Blocks:</span>I have limited time due to real life interference today</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>.call() .apply() .bind() article illustrating the power of the double-pipe operator to obviate the need for an if statement (see javascript view)</li>
   </ol>
   <hr />
   <h2 class="date">Saturday July 22nd, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Incrementalism. <a href="http://freakonomics.com/podcast/become-great-just-anything/" target="_blank">Interesting debate</a> on deliberate practice Malcom Gladwell (of 10,000 hours "Outliers" fame) vs Anders Ericsson on the fallacy of 10,000 making a qualitative rather than quantitative point about <em>How</em> those 10,000 hours are spent.</h3>
-
+  <blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">Masking images in <a href="https://twitter.com/hashtag/CSS?src=hash">#CSS</a> using mask-image: <a href="https://t.co/o95uS7xD3d">https://t.co/o95uS7xD3d</a></p>&mdash; Alligator.io (@alligatorio) <a href="https://twitter.com/alligatorio/status/885167575851782144">July 12, 2017</a></blockquote>
+  <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   <br>
   <h3>To do:</h3>
   <ol class="todo">
@@ -49,7 +51,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>placed 3rd of what is going to be a handful of small examples of .bind() working with <em>this</em> and identifying it's scope using instanceof getPrototypeOf()...</li>
   </ol>
   <hr />
   <h2 class="date">Friday July 21st, 2017</h2>
