--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,11 +20,26 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Monday July 24th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Made some interesting discoveries about .defineProperty() method yesterday--that ships with "value", "writeable", "enumerable", "get" & "set" (and other?) properties. Interesting stuff.</h3>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">The latest UI Animation Newsletter is all about animating with CSS Variables: <a href="https://t.co/GlHZA7WOjg">https://t.co/GlHZA7WOjg</a> <a href="https://t.co/1kUaXZHAAh">pic.twitter.com/1kUaXZHAAh</a></p>&mdash; Val Head (@vlh) <a href="https://twitter.com/vlh/status/889572186641530880">July 24, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>.defineProperty() method on objects entry in ecma view.</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span> none</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Sunday July 23rd, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">More on objects and back into SQL</h3>
-  <blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">Masking images in <a href="https://twitter.com/hashtag/CSS?src=hash">#CSS</a> using mask-image: <a href="https://t.co/o95uS7xD3d">https://t.co/o95uS7xD3d</a></p>&mdash; Alligator.io (@alligatorio) <a href="https://twitter.com/alligatorio/status/885167575851782144">July 12, 2017</a></blockquote>
-  <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw"  data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">How to Use CSS Variables for Animation: <a href="https://t.co/1P5nVmxeVE">https://t.co/1P5nVmxeVE</a></p>&mdash; FrontEnd Daily (@FrontEndDaily) <a href="https://twitter.com/FrontEndDaily/status/888084097222017024">July 20, 2017</a></blockquote>
   <br>
   <h3>To do:</h3>
   <ol class="todo">
@@ -40,8 +55,7 @@
   <h2 class="date">Saturday July 22nd, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Incrementalism. <a href="http://freakonomics.com/podcast/become-great-just-anything/" target="_blank">Interesting debate</a> on deliberate practice Malcom Gladwell (of 10,000 hours "Outliers" fame) vs Anders Ericsson on the fallacy of 10,000 making a qualitative rather than quantitative point about <em>How</em> those 10,000 hours are spent.</h3>
-  <blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">Masking images in <a href="https://twitter.com/hashtag/CSS?src=hash">#CSS</a> using mask-image: <a href="https://t.co/o95uS7xD3d">https://t.co/o95uS7xD3d</a></p>&mdash; Alligator.io (@alligatorio) <a href="https://twitter.com/alligatorio/status/885167575851782144">July 12, 2017</a></blockquote>
-  <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <blockquote class="twitter-tweet" data-cards="hidden" data-dnt="true" data-align="right" data-width="20vw"  data-lang="en"><p lang="en" dir="ltr">Masking images in <a href="https://twitter.com/hashtag/CSS?src=hash">#CSS</a> using mask-image: <a href="https://t.co/o95uS7xD3d">https://t.co/o95uS7xD3d</a></p>&mdash; Alligator.io (@alligatorio) <a href="https://twitter.com/alligatorio/status/885167575851782144">July 12, 2017</a></blockquote>
   <br>
   <h3>To do:</h3>
   <ol class="todo">
@@ -1051,3 +1065,4 @@ I'm about to get back into GSAP in prep for a foray into some light animation ke
 
 
 </div>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
