--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -8,7 +8,7 @@
 
 <!--
 -->
-<div class="framed2 dkbg"><h2 class="chtitle ltgrey">Object.defineProperty(<em class="orange">object</em>)</h2>
+<div class="framed2 dkbg2"><h2 class="chtitle ltgrey">Object.defineProperty(<em class="orange">object</em>)</h2>
   <h4 class="wh">We have a simple object returning a useful string to place onto an element.</h4>
   <pre class="prettyprint ctr w60">
 var colorHSL = {
@@ -16,14 +16,14 @@ var colorHSL = {
   saturation: 50,
   lightness: 50,
   output: function() {
-    var colorString =  "color: hsl(" + this.hue + ", " + this.saturation + "%, " +this.lightness + "%);";
+    var colorString =  "color: hsl(" + this.hue + ", " + this.saturation + "%, " + this.lightness + "%);";
     console.log(colorString);
   }
 }
 
 colorHSL.output();
 
-// background-color: hsl(180, 50%, 50%);
+// color: hsl(180, 50%, 50%);
 </pre>
 <span class="med wh">I can create further properties on this object using <em>Object.defineProperty()</em> passing in 3 arguments.</span>
   <ol class="w40 condensed-list ">
@@ -40,7 +40,7 @@ colorHSL.output();
     })
 
     colorHSL.modSat(30);
-    // background-color: hsl(180, 80%, 50%);
+    // color: hsl(180, 80%, 50%);
 
     Object.defineProperty(colorHSL, "modHue", {
       value: function(amount) {
@@ -50,7 +50,7 @@ colorHSL.output();
     })
 
     colorHSL.modHue(50);
-    // background-color: hsl(230, 80%, 50%);
+    // color: hsl(230, 80%, 50%);
     Object.defineProperty(colorHSL, "modLight", {
       value: function(amount) {
         this.lightness += amount;
@@ -59,11 +59,97 @@ colorHSL.output();
     })
 
     colorHSL.modLight(-20);
-    // background-color: hsl(230, 80%, 30%);
+    // color: hsl(230, 80%, 30%);
   </pre>
+<p class="ltgrey">Very nice. I can add properties/methods to the object to modify it using the "value:" keyword...
 
+Now let's try this with a property...giving colorHSL's hue a default of 90;</p>
+<pre class="framed6 w50">Object.defineProperty(colorHSL, "modHue", {
+  value: 90
+})
+
+<span class="ltgrey">Now let's update it...</span>
+colorHSL.modHue(-50);
+console.log(colorHSL.output());
+</pre>
+
+<h3 class="ltgrey">Let's add another property to our colorHSL object. We will make this a default</h3>
+<h3 class="ltgrey">._hue (by convention, an "_" may be prepended)</h3><pre class="framed6 w60">
+Object.defineProperty(colorHSL, "_hue", {
+  value: 90
+})
+
+colorHSL._hue = 0;   // THIS line throws a TypeError!
+<h3 class="ltgreen">"You cannot assign '0' to read-only property"</h3>
+console.log(colorHSL._hue);
+
+<h4 class="paleY ctr w50">Here we have one very useful feature of .defineProperty();
+
+"_hue" will never be changed --unless, a flag "writable: true" is added to the object</h4>
+
+Object.defineProperty(colorHSL, "_hue", {
+ value: 90,
+ <span class="mango">writable: true</span>
+})
+
+<h4 class="paleY ctr w50">We, now, can modify and return the new value</h4>
+
+colorHSL._hue = 200;
+console.log(colorHSL._hue);<span class="ltgreen thin">  // 200</span>
+</pre>
+<p class="ltgrey">(enumerable: true --is also a possible boolean flag)</p>
+<hr>
+<h2 class="chtitle ltgrey thin">The power of getters & setters using .defineProperty()</h2>
+
+<h4 class="wh">HSL colors in CSS have a range of values within which the rule applies.
+hue: 0 - 360 & the others 0-100%.
+
+Let's start from scratch setting each property at "0"</h4>
+
+<pre class="prettyprint ctr w60">var colorHSL = {
+  _hue: 0,
+  _saturation: 0,
+  _lightness: 0,
+  output: function() {
+    var colorString=  "color: hsl(" + this._hue + ", " + this._saturation + "%, " + this._lightness + "%);";
+    console.log(colorString);
+  }
+}
+colorHSL.output();
+</pre>
+
+<h4 class="ctr ltgreen"><span class="mango">This returns: </span>color: hsl(0, 0%, 0%);</h4>
+
+<p class="softsand">Now instead of <em class="ltgrey">"value:"</em> I use <span class="paleY">get:</span> & <span class="paleY">set:</span> to modify the property.</p>
+<pre class="framed6 ctr w50">Object.defineProperty(colorHSL, "hue", {
+   get: function() {
+     console.log(this._hue);
+     return this._hue;
+   },
+<span class="wh sm thin">This "get:" method is clear enough. It will always reach into coloHSL and return the _hue property. <br>
+However, with<code class="dkorange">set</code>, I must be careful to respect the bounds of acceptable CSS hsl values.
+I allow for<code class="dkorange">set</code> to accept an argument<code class="ltgreen">input</code>
+But, I set a "filter" of sorts --only accepting a new input that meets a condition...</span>
+   set: function(<span class="ltgreen">input</span>) {
+     if <span class="dkorange">(input>=0 && input <= 360)</span> {
+       this._hue = input;
+       console.log(`New Hue value: ${this._hue}`);
+     }
+   }
+ })
+<span class="wh sm thin">... if the new input doesn't meet the condition, a new value is not set and the default colorHSL._hue returns
+<span class="ltgreen">// color: hsl(0, 0%, 0%);</span>
+
+... if the new input meets the condition, a new value is sent to colorHSL._hue
+<span class="ltgreen">// New Hue value: 200</span>
+
+--finally, a sanity check;
+<code class="wh">colorHSL.output();</code>
+<span class="ltgreen">// color: hsl(200, 0%, 0%);</span>
+</span>
+</pre>
 </div>
-
+<hr>
 <div class="framed8"><h3 class="chtitle coral">Neat, clean replacement for an if statement using "||"</h3>
   Let's create a function that identifies what animals eat & gives us the object that 'this' refers to.
 
