--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -28,12 +28,13 @@
   <h3>To do:</h3>
   <ol class="todo">
     <li>.defineProperty() method on objects entry in ecma view.</li>
-    <li></li>
+    <li>create proof of concept exercise exploiting getters/setters <em>Obj.defineProperty()</em></li>
     <li><span class="ltred">Potential Blocks:</span> none</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Completed entry in javscript view on Object.defineProperty() with getters & setters.</li>
+    <li>Completed exercise and placed in <a href="https://codepen.io/beau_dev/full/brNZXB/" target="_blank">Codepen</a></li>
   </ol>
   <hr />
   <h2 class="date">Sunday July 23rd, 2017</h2>
